--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "cico",
+        "echarts",
         "fastfood",
         "iconfont",
-        "uuidv"
+        "upsert",
+        "uuidv",
+        "zlevel"
     ]
 }
