--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "echarts": "^4.9.0",
     "express": "^4.17.1",
     "guid-typescript": "^1.0.9",
     "ionicons": "^5.1.2",
@@ -33,6 +34,7 @@
     "ng-material-icon": "^1.1.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-debounce": "^2.0.1",
+    "ngx-echarts": "^5.1.2",
     "open-iconic": "^1.1.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
@@ -44,19 +46,20 @@
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
+    "@types/echarts": "^4.6.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "karma": "^5.2.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "nodemon": "^2.0.4",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
