--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,12 @@
         "cico",
         "echarts",
         "fastfood",
+        "gapi",
+        "googleusercontent",
         "iconfont",
+        "iiuq",
+        "ntougd",
+        "ogser",
         "upsert",
         "uuidv",
         "zlevel"
