--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.7",
-    "@angular/cdk": "^10.1.3",
+    "@angular/cdk": "^10.2.0",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
@@ -31,6 +31,7 @@
     "material-icons": "^0.3.1",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
+    "ng-gapi": "0.0.93",
     "ng-material-icon": "^1.1.0",
     "ng-pick-datetime": "^7.0.0",
     "ngx-debounce": "^2.0.1",
@@ -43,7 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "~9.0.7",
+    "@angular/cli": "^10.1.1",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
     "@types/echarts": "^4.6.5",
@@ -62,6 +63,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "^3.7.5"
   }
 }
